[metadata]
name = threading-austinhellerrepo
version = 0.1.7
author = Austin Heller
description = A basic threading package
url = https://github.com/AustinHellerRepo/Threading
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
